log
Thu Mar 19 07:28:57 PM UTC 2026: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |          suma = (int *)aux;
      |               ^
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:24: error: comparison between pointer and integer [-Werror]
   82 |          if((int *)aux == elem)
      |                        ^~
cc1: all warnings being treated as errors
2d909d0
Thu Mar 19 07:29:44 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |          suma += (int *)aux;
      |               ^~
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:24: error: comparison between pointer and integer [-Werror]
   82 |          if((int *)aux == elem)
      |                        ^~
cc1: all warnings being treated as errors
aa9bad8
Thu Mar 19 07:30:50 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:18: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   61 |          suma += (int)(((int *)aux));
      |                  ^
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:24: error: comparison between pointer and integer [-Werror]
   82 |          if((int *)aux == elem)
      |                        ^~
cc1: all warnings being treated as errors
fe7ea87
Thu Mar 19 07:32:08 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |          suma += (int *)aux;
      |               ^~
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:13: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   82 |          if((int )aux == elem)
      |             ^
cc1: all warnings being treated as errors
8d8188f
Thu Mar 19 07:32:55 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |          suma += (int *)aux;
      |               ^~
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:27: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   82 |          if((int *)aux == (int *)elem)
      |                           ^
cc1: all warnings being treated as errors
ed028ed
Thu Mar 19 07:36:21 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |          suma += (int *)aux;
      |               ^~
ae9ead1
Thu Mar 19 07:36:42 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
de709b5
Thu Mar 19 07:44:48 PM UTC 2026: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
b1bd3a8
Thu Mar 19 07:48:31 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 30/70
899aa82
Thu Mar 19 08:00:09 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:10: error: dereferencing ‘void *’ pointer [-Werror]
   49 |          *n = i;
      |          ^~
exercises.c:49:13: error: invalid use of void expression
   49 |          *n = i;
      |             ^
cc1: all warnings being treated as errors
f72b798
